# jira-timer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.github/workflows/: build.yml
launchd/: com.jira-timer.idle-monitor.plist
plugins/: jira-timer.plugin.zsh
src/jira_timer/: __init__.py  cli.py  idle_monitor.py
tests/: test_idle_transitions.py  test_pure.py  test_state.py
